<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/revenue_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_revenue" />

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:layout_constraintTop_toBottomOf="@+id/revenue_title"
            android:id="@+id/revenueTypeBillDistroSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SearchView
            app:layout_constraintTop_toBottomOf="@+id/revenueTypeBillDistroSpinner"
            android:iconifiedByDefault="false"
            android:queryHint="Search a business/property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchview_billDistro" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/searchview_billDistro"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/bopPropName"
            android:fontFamily="@font/roboto_bold" />

        <ListView
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/bopPropName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bopPropListview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:id="@+id/resultScrollview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/bopPropName"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/failedDistroCheckbox"
                    android:text="Failed Distribution"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/failedDistroCheckbox"
                    android:id="@+id/failed_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Reason"
                        android:id="@+id/reason_label"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Spinner
                        app:layout_constraintTop_toBottomOf="@+id/reason_label"
                        android:padding="10dp"
                        android:background="#dcdcdc"
                        android:id="@+id/reasonsBillDistroSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/failed_layout"
                    android:id="@+id/success_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nameTIL"
                        app:layout_constraintTop_toTopOf="parent"
                        android:hint="@string/recipient_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/phoneTIL"
                        app:layout_constraintTop_toBottomOf="@+id/nameTIL"
                        android:hint="@string/recipient_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailTIL"
                        app:layout_constraintTop_toBottomOf="@+id/phoneTIL"
                        android:hint="Recipient Email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feedbackTIL"
                    app:layout_constraintTop_toBottomOf="@+id/success_layout"
                    android:hint="@string/tax_payer_feedback">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/feedbackEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/remarksTIL"
                    app:layout_constraintTop_toBottomOf="@+id/feedbackTIL"
                    android:hint="@string/agent_remarks">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remarksEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    app:layout_constraintTop_toBottomOf="@+id/remarksTIL"
                    android:visibility="gone"
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>